examples/test/testpolicy6408.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6408
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key32: value29
      key48: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value40
          key10: value1
          key35: value11
      podSelector:
        matchLabels:
          key7: value25
